<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PasswordKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="repassword">Re Enter Password</string>
     <string name="register">Register</string>
      <string name="cancel">Cancel</string>
    <string name="enterpassword">Enter Password</string>

</resources>